# travelio-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  seed_db.sh  travelio_chatbot.py
alembic/: env.py
alembic/versions/: 0813014532b8_initial_migration.py
app/api/schemas/: __init__.py  attraction.py  destination.py  hotel.py  itinerary.py  itinerary_template.py
app/client/: __init__.py  chatbot.py  gemini_client.py  mcp_client.py
app/core/: clustering.py  config.py  itinerary_planner.py
app/db/: base.py  session.py
app/db/models/: __init__.py  attraction.py  destination.py  hotel.py  itinerary.py  itinerary_template.py
app/mcp/: __init__.py  client.py  server.py  wrapper.py
app/services/: __init__.py  attraction_service.py  destination_service.py  hotel_service.py  itinerary_service.py
scripts/: migrations.py  seed_data.py  test_db.py
tests/api/: test_mcp_server.py
tests/services/: test_destination_service.py
